...

  const tabs = [
    {
      id: "home",
      icon: "home-outline",
      activeIcon: "home",
      label: "Accueil",
      route: "/(tabs)/",
    },
    {
      id: "exercises",
      icon: "book-outline",
      activeIcon: "book",
      label: "Exercices",
      route: "/(tabs)/levelSelection",
    },
    {
      id: "chat",
      icon: "chatbubble-outline",
      activeIcon: "chatbubble",
...
