...
      </TouchableOpacity>
    );
  }, [handleLevelPress, colors, styles]);

  return (
    <Container
      testID="level-selection-container"
      safeArea
      safeAreaEdges={CONTAINER_SAFE_EDGES.NO_BOTTOM}
      withScrollView={false}
      backgroundColor="transparent" 
      statusBarColor="#6366F1"
      statusBarStyle="light-content"
...
