appId: com.hamdanek.JoudEnglishApp
---
- clearState
- openLink: "exp+joudenglishapp://expo-development-client/?url=http://localhost:8082"
- tapOn: "Réglages"
- assertVisible: "Paramètres"
- assertVisible:
    id: "security-settings"
- tapOn:
    id: "set-pin-button"
- assertVisible:
    id: "pin-input-1"
- inputText:
    id: "pin-input-1"
    text: "1234"
- inputText:
    id: "pin-input-2"
    text: "1234"
- tapOn:
    id: "pin-save"
- openLink: "exp+joudenglishapp://expo-development-client/?url=http://localhost:8082"
- assertVisible:
    id: "lock-screen"
- inputText:
    id: "pin-input"
    text: "1234"
- tapOn:
    id: "pin-submit"

