appId: com.hamdanek.JoudEnglishApp
---
- clearState
- openLink: "exp+joudenglishapp://expo-development-client/?url=http://localhost:8082"
- tapOn: "Accueil"
- tapOn: "Exercices"
- tapOn: "Réglages"
- tapOn: "Accueil"


