appId: com.hamdanek.JoudEnglishApp
---
- clearState
- openLink: "exp+joudenglishapp://expo-development-client/?url=http://localhost:8082"
- assertVisible:
    id: "hero-empty-section"
- assertVisible:
    id: "level-selection-button"
- tapOn:
    id: "level-selection-button"
- assertVisible:
    id: "level-selection-container"
- tapOn:
    id: "level-1"
- assertVisible:
    id: "exercise-selection-container"
- tapOn:
    id: "phrases-button"


