appId: com.hamdanek.JoudEnglishApp
---
- clearState
- openLink: "exp+joudenglishapp://expo-development-client/?url=http://localhost:8082"
- tapOn:
    id: "level-selection-button"
- tapOn:
    id: "level-1"
- assertVisible:
    id: "exercise-selection-container"
- tapOn:
    id: "vocabulary-button"


